// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleCategory  Library closed, category collapsed  Renders with category icon, but without list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={true}
    isReadOnly={false}
    libraryOpen={false}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          isReadOnly={false}
          libraryOpen={false}
          name="First Module"
          setOpenCategory={[Function]}
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          isReadOnly={false}
          libraryOpen={false}
          name="Second Module"
          setOpenCategory={[Function]}
      />,
      ]
    }
    name="Add data"
    setOpenCategory={[Function]}
  >
    <div
      className="card module-category--open"
    >
      <div
        className="module-category--wrapper"
      >
        <div
          className="first-level"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="closed-ML--category"
          >
            <span
              className="icon-database ml-icon"
            />
          </div>
        </div>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;

exports[`ModuleCategory  Library closed, category open Renders with list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={false}
    isReadOnly={false}
    libraryOpen={false}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          isReadOnly={false}
          libraryOpen={false}
          name="First Module"
          setOpenCategory={[Function]}
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          isReadOnly={false}
          libraryOpen={false}
          name="Second Module"
          setOpenCategory={[Function]}
      />,
      ]
    }
    name="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="card module-category--open"
    >
      <div
        className="module-category--wrapper"
      >
        <div
          className="first-level"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="closed-ML--category"
          >
            <span
              className="icon-undefined ml-icon"
            />
          </div>
        </div>
        <div
          className="ml-list-mini"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="add"
            id={88}
            isReadOnly={false}
            libraryOpen={false}
            name="First Module"
            setOpenCategory={[Function]}
          >
            <Module
              addModule={[Function]}
              connectDragPreview={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="add"
              id={88}
              isDragging={false}
              isReadOnly={false}
              libraryOpen={false}
              name="First Module"
              setOpenCategory={[Function]}
            >
              <div
                className="card ml-module-card"
                onClick={[Function]}
              >
                <div
                  className="second-level d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-add ml-icon"
                      />
                    </div>
                    <div>
                      <div
                        className="content-5 ml-module-name"
                      >
                        First Module
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="url"
            id={101}
            isReadOnly={false}
            libraryOpen={false}
            name="Second Module"
            setOpenCategory={[Function]}
          >
            <Module
              addModule={[Function]}
              connectDragPreview={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="url"
              id={101}
              isDragging={false}
              isReadOnly={false}
              libraryOpen={false}
              name="Second Module"
              setOpenCategory={[Function]}
            >
              <div
                className="card ml-module-card"
                onClick={[Function]}
              >
                <div
                  className="second-level d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-url ml-icon"
                      />
                    </div>
                    <div>
                      <div
                        className="content-5 ml-module-name"
                      >
                        Second Module
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
        </div>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;

exports[`ModuleCategory  Library open Renders with list of Module components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategory
    collapsed={false}
    isReadOnly={false}
    libraryOpen={true}
    modules={
      Array [
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="add"
          id={88}
          isReadOnly={false}
          libraryOpen={true}
          name="First Module"
          setOpenCategory={[Function]}
      />,
        <DragSource(Module)
          addModule={[Function]}
          dropModule={[Function]}
          icon="url"
          id={101}
          isReadOnly={false}
          libraryOpen={true}
          name="Second Module"
          setOpenCategory={[Function]}
      />,
      ]
    }
    name="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="card module-category--open"
    >
      <div
        className="module-category--wrapper"
      >
        <div
          className="first-level"
        >
          <div
            className="category-container"
          >
            <span
              className="category-name"
            >
              Add Data
            </span>
          </div>
        </div>
        <div
          className="ml-list"
        >
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="add"
            id={88}
            isReadOnly={false}
            libraryOpen={true}
            name="First Module"
            setOpenCategory={[Function]}
          >
            <Module
              addModule={[Function]}
              connectDragPreview={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="add"
              id={88}
              isDragging={false}
              isReadOnly={false}
              libraryOpen={true}
              name="First Module"
              setOpenCategory={[Function]}
            >
              <div
                className="card ml-module-card"
                onClick={[Function]}
              >
                <div
                  className="second-level d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-add ml-icon"
                      />
                    </div>
                    <div>
                      <div
                        className="content-5 ml-module-name"
                      >
                        First Module
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
          <DragSource(Module)
            addModule={[Function]}
            dropModule={[Function]}
            icon="url"
            id={101}
            isReadOnly={false}
            libraryOpen={true}
            name="Second Module"
            setOpenCategory={[Function]}
          >
            <Module
              addModule={[Function]}
              connectDragPreview={[Function]}
              connectDragSource={[Function]}
              dropModule={[Function]}
              icon="url"
              id={101}
              isDragging={false}
              isReadOnly={false}
              libraryOpen={true}
              name="Second Module"
              setOpenCategory={[Function]}
            >
              <div
                className="card ml-module-card"
                onClick={[Function]}
              >
                <div
                  className="second-level d-flex"
                >
                  <div
                    className="d-flex flex-row align-items-center"
                  >
                    <div
                      className="ml-icon-container"
                    >
                      <div
                        className="icon-url ml-icon"
                      />
                    </div>
                    <div>
                      <div
                        className="content-5 ml-module-name"
                      >
                        Second Module
                      </div>
                    </div>
                  </div>
                  <div
                    className="ml-handle"
                  >
                    <div
                      className="icon-grip"
                    />
                  </div>
                </div>
              </div>
            </Module>
          </DragSource(Module)>
        </div>
      </div>
    </div>
  </ModuleCategory>
</DragDropContextProvider>
`;
